Updates from Overleaf

--- a/frontmatter/contributions.tex
+++ b/frontmatter/contributions.tex
@@ -1,3 +1,5 @@
-\section*{Chapter \ref{e3fp-paper}}
+\chapter*{Contributions}
 
-\fullcite{axen_simple_2017}
+\section*{\cref{e3fp-paper}}
+
+\fullcite{axenSimpleRepresentationThreeDimensional2017}
