--- a/frontmatter/copyright.tex
+++ b/frontmatter/copyright.tex
@@ -1,8 +1,7 @@
 \begin{center}
-  \makeatletter
-  \Large{\@title} \par
-  \vspace{1in}  Copyright 2020\par
-  \vspace{.1in} by\par
-  \vspace{.1in} \@author
-  \makeatother
+	\vspace{1in}  Copyright 2020\par
+	\vspace{.1in} by\par
+	\makeatletter
+	\vspace{.1in} \@author{}
+	\makeatother
 \end{center}
